aalg: INC_10652_SIGA y INC_10651_SIGA